# opthub-runner-python

./: CHANGELOG.md  README.md  README_ja.md  pyproject.toml
opthub_evaluator/: docker_executor.py  main.py
opthub_evaluator/lib/: docker_executor.py
opthub_runner/: docker_executor.py  evaluator.py
tests/: __init__.py  test_evaluator.py  test_main.py
