[tool.poetry]
name = "opthub_evaluator"
version = "0.1.0"
description = ""
authors = ["Opthub Inc. <dev@opthub.ai>"]
readme = "README.md"


[tool.ruff]
target-version = "py312"
line-length = 120
select = ["ALL"]
ignore = [
    "ANN101",   # Don't require type hints for self.
    "D104",     # Don't require docstrings for public packages.
    "RET504",   # Allow assignment before return
    "FBT001",   # Allow bool type positional arguments
    "TD002",    # Allow unassigned todos
    "TD003",    # Allow todos without issue
    "TRY301",   # Allow abstract `raise` to an inner function
    "DTZ005",   # Allow timezone naive datetime
    "BLE001",   # Allow builtin exceptions
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry.dependencies]
python = "3.12.1"
click = "^8.1.7"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

